[package]
name = "leptos_tmf"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Ruckley <rruckley@gmail.com>"]
description = "Library to render TMF schema as forms"
repository = "https://github.com/rruckley/leptos_tmf"

[features]
v4 = ["tmflib/build-V4"]
v5 = ["tmflib/build-V5"]

default = ["v4"]

[dependencies]
leptos = "0.6.15"
tmflib = "0.1.22"
